<resources>
  <string name="app_name">SkinSight Apps</string>
  <string name="home">Home</string>
  <string name="history">History</string>
  <string name="detection">Detection</string>
  <string name="detection_result">Detection Result</string>
  <string name="profile">Profile</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="email">Email</string>
  <string name="full_name">Full Name</string>
  <string name="password">Password</string>
  <string name="sign_up">Sign Up</string>
  <string name="hint_name">Masukkan nama</string>
  <string name="hint_email">Masukkan email</string>
  <string name="hint_password">Masukkan password</string>
  <string name="login">Login</string>
  <string name="login_now">Sudah punya akun? Login</string>
  <string name="sign_up_now">Belum punya akun? Sign Up</string>
  <string name="detect_skin_disease">Skin Disease Classification</string>
  <string name="detect_skin_tone">Skintone Classification</string>
  <string name="skin_disease">Skin Disease</string>
  <string name="acne">Acne</string>
  <string name="date_dummy">01/02/2023</string>
  <string name="date_dummy_2">1 May 2023 | 20:12</string>
  <string name="desc_dummy">Terdapat jerawat, pilaris, milia, dan beberapa penyakit lainnya</string>
  <string name="article_title">Article Title</string>
  <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Pharetra pellentesque at at amet lectus blandit. Metus risus mi tellus nisi leo cursus a pellentesque ut. Fermentum viverra curabitur eget odio amet vestibulum. Laoreet integer cursus ut netus faucibus. Duis mattis sem diam aliquam nunc quis urna nullam. Congue cursus commodo sit mi duis aliquet orci. Nisi sollicitudin velit imperdiet donec nisl donec. Gravida eget cras ultrices facilisis.\nId donec nisi at tincidunt cras ultricies ut. Risus eu in lorem congue consectetur in. Lacinia pulvinar quam lacus proin id lacus. Eget rhoncus risus odio urna. Varius nisl varius diam in et. Nulla duis id adipiscing malesuada enim magna. Id morbi augue dui ipsum nunc. Nisl etiam sit consequat donec etiam risus ipsum. Etiam magna dis tellus elit eget. Eget eget vivamus in mollis pretium scelerisque. Sed velit ut lorem maecenas lacus nunc.</string>
  <string name="sample_name">Cantika</string>
  <string name="sample_email">cantika@gmail.com</string>
  <string name="name">Name</string>
  <string name="sample_password">12345678</string>
  <string name="logout">Logout</string>
  <string name="edit">edit</string>
  <string name="splashscreen">splashscreen</string>
  <string name="onboard_description">Dapatkan kulit sehat yang kamu inginkan, coba sekarang dan lihat hasilnya!</string>
  <string name="onboard_get_started">Get Started</string>
  <string name="percentage">40%</string>
  <string name="upload">Upload</string>
  <string name="preview">Preview</string>
  <string name="allow_permission">Mohon izinkan akses kamera pada pengaturan</string>
  <string name="email_invalid">Alamat email tidak valid</string>
  <string name="password_invalid">Minimal kata sandi terdiri dari 8 karakter</string>
  <string name="save_changes">Save Changes</string>
  <string name="cancel">Cancel</string>
  <string name="greet">Welcome, <b>%1$s!</b></string>
  <string name="title_classification">Klasifikasi SkinSight</string>
  <string name="try_now">Coba Sekarang!</string>
  <string name="try_text">Ayo eksplorasi penyakit kulit dan kenali skintonemu dengan akurat untuk memahami variasi warna kulit dan memilih produk perawatan yang tepat untuk menjaga keindahan dan kesehatan kulit kamu! </string>
  <string name="reset_password">Reset Password</string>
  <string name="reset">Reset</string>
  <string name="msg_success_reset">Link reset password telah di kirim ke email</string>
  <string name="msg_success_changes">Berhasil edit email dan password</string>
  <string name="msg_failed_changes">Gagal edit email dan password</string>
  <string name="msg_failed_changes_name">Gagal edit nama</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="new_password">New Password</string>
  <string name="current_password">Current Password</string>
  <string name="title_article">Artikel Terkait</string>
</resources>