<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.onboard.OnboardingActivity">

  <ImageView
    android:id="@+id/img_logo"
    android:layout_width="310dp"
    android:layout_height="240dp"
    android:layout_marginTop="64dp"
    android:contentDescription="@string/splashscreen"
    android:scaleType="centerCrop"
    android:src="@drawable/img_onboard"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_desc_onboard"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="24dp"
    android:gravity="center"
    android:text="@string/onboard_description"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/img_logo" />

  <Button
    android:id="@+id/btn_onboard"
    android:layout_width="0dp"
    android:layout_height="64dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="48dp"
    android:background="@drawable/rounded_corner_20_green"
    android:text="@string/onboard_get_started"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>