<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.profile.ProfileFragment">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_profile"
        app:civ_border_color="@color/dark_green"
        app:civ_border_width="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <ImageButton
        android:id="@+id/btn_iv_edit_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="148dp"
        android:background="@null"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_outline_edit_24"
        app:layout_constraintStart_toStartOf="@id/img_photo"
        app:layout_constraintTop_toTopOf="@id/img_photo" />

      <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_photo" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:ems="10"
          android:focusable="false"
          android:hint="@string/sample_name"
          android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_layout" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:cursorVisible="false"
          android:ems="10"
          android:focusable="false"
          android:hint="@string/sample_email"
          android:inputType="textEmailAddress" />
      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_layout" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:cursorVisible="false"
          android:ems="10"
          android:focusable="false"
          android:inputType="textPassword"
          tools:text="@string/sample_password"
          app:passwordToggleEnabled="false" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_corner_20_green"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

  <ProgressBar
    android:id="@+id/progress_bar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>