<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">


        <ImageView
          android:id="@+id/img_logo"
          android:layout_width="0dp"
          android:layout_height="110dp"
          android:layout_marginStart="24dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="24dp"
          android:background="@drawable/rounded_corner_20_white"
          android:clipToOutline="true"
          android:scaleType="centerCrop"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@drawable/img_gray_sign" />

        <TextView
          android:id="@+id/tv_title"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="24dp"
          android:text="@string/sign_up"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <TextView
          android:id="@+id/tv_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="24dp"
          android:text="@string/full_name"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/et_name_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="24dp"
          app:boxCornerRadiusBottomEnd="12dp"
          app:boxCornerRadiusBottomStart="12dp"
          app:boxCornerRadiusTopEnd="12dp"
          app:boxCornerRadiusTopStart="12dp"
          app:hintEnabled="false"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/et_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:hint="@string/hint_name"
              android:inputType="text"
              app:passwordToggleEnabled="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
          android:id="@+id/tv_email"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="20dp"
          android:text="@string/email"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/et_email_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="24dp"
          app:boxCornerRadiusBottomEnd="24dp"
          app:boxCornerRadiusBottomStart="12dp"
          app:boxCornerRadiusTopEnd="12dp"
          app:boxCornerRadiusTopStart="12dp"
          app:hintEnabled="false"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/et_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:hint="@string/hint_email"
              android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
          android:id="@+id/tv_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="20dp"
          android:text="@string/password"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/et_email_layout" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/et_password_layout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="24dp"
          app:boxCornerRadiusBottomEnd="12dp"
          app:boxCornerRadiusBottomStart="12dp"
          app:boxCornerRadiusTopEnd="12dp"
          app:boxCornerRadiusTopStart="12dp"
          app:hintEnabled="false"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_password"
          app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/et_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:hint="@string/hint_password"
              android:inputType="textPassword"
              app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
          android:id="@+id/btn_tv_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="64dp"
          android:text="@string/login_now"
          app:layout_constraintTop_toBottomOf="@id/et_password_layout"
          app:layout_constraintEnd_toEndOf="@+id/btn_signup"/>

        <Button
          android:id="@+id/btn_signup"
          android:layout_width="0dp"
          android:layout_height="64dp"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="48dp"
          android:background="@drawable/rounded_corner_20_green"
          android:text="@string/sign_up"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/btn_tv_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>