<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.auth.login.ResetPasswordActivity">

  <include
    android:id="@+id/toolbar"
    layout="@layout/toolbar" />

  <TextView
    android:id="@+id/tv_email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="64dp"
    android:alpha="0"
    android:text="@string/email"
    android:textColor="@color/black"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toolbar" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/et_email_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:alpha="0"
    app:boxCornerRadiusBottomEnd="12dp"
    app:boxCornerRadiusBottomStart="12dp"
    app:boxCornerRadiusTopEnd="12dp"
    app:boxCornerRadiusTopStart="12dp"
    app:hintEnabled="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_email">

    <com.yhezra.skinsightapps.ui.components.EmailEditText
      android:id="@+id/et_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_email"
      android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>

  <ProgressBar
    android:id="@+id/progress_bar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible" />

  <Button
    android:id="@+id/btn_reset"
    android:layout_width="0dp"
    android:layout_height="64dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="48dp"
    android:alpha="0"
    android:background="@drawable/rounded_corner_20_green"
    android:text="@string/reset"
    android:textAllCaps="false"
    android:textColor="@color/white"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/et_email_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>